force.com/CALM/src/objects/Sweeper__c.object
<CustomObject>
    <fields>
        <fullName>au__c</fullName>
        <description>The application key of the sweeped objects</description>
        <label>App Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edate__c</fullName>
        <description>End date for the sweeped objects</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sdate__c</fullName>
        <description>The start date for the sweeped objects</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Sweeper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>au__c</columns>
        <columns>sdate__c</columns>
        <columns>edate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sweeper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sweepers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>